<?xml version="1.0"?>
<package>
  <name>jsoncpp</name>
  <version>0.0.0</version>
  <description>A fixed version of jsoncpp with catkin capabilities</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="blep@users.sourceforge.net">Baptiste Lepilleur</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
